corrected volume-time-sensitivity calculations

--- a/time-volume.ipynb
+++ b/time-volume.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "fc180038-c7e7-4dcb-8d85-6b87eda8523b",
    "metadata": {},
    "outputs": [],
@@ -241,22 +241,25 @@
     "import astropy.units as u\n",
     "from astropy.cosmology import Planck15, z_at_value\n",
     "from scipy import integrate\n",
+    "from astropy import constants as const\n",
     "\n",
     "dl = np.arange(1, 10000, 10)\n",
-    "z = list()\n",
+    "z_lst = list()\n",
     "for i in dl:\n",
-    "    z.append(z_at_value(Planck15.luminosity_distance, i*u.Mpc).value)\n",
-    "c = list()\n",
-    "for i in z:\n",
-    "    c.append(Planck15.efunc(i))\n",
+    "    z_lst.append(z_at_value(Planck15.luminosity_distance, i*u.Mpc).value)\n",
+    "    \n",
+    "cosmo_lst = list()\n",
+    "for z in z_lst:\n",
+    "    e = Planck15.efunc(z)\n",
+    "    cosmo_lst.append(1/(e*(1+z)**3))\n",
     "\n",
-    "kernel = c * (dl**2)\n",
-    "integral = integrate.cumtrapz(kernel, x=z) * u.Mpc ** 2\n"
+    "kernel = cosmo_lst * (dl**2)\n",
+    "integral = integrate.cumtrapz(kernel, x=z_lst) * u.Mpc ** 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "id": "d7667e3b-5810-4b64-9dda-3c349026f3a1",
    "metadata": {},
    "outputs": [
@@ -264,7 +267,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8329001.9931672225 Mpc2\n"
+      "67.74 km / (Mpc s)\n",
+      "10996281752719.53 m Mpc3 yr / km\n"
      ]
     }
    ],
@@ -278,7 +282,9 @@
     "for i in inds:\n",
     "    sum_total += integral[i]\n",
     "\n",
-    "volume_sens = 4*np.pi*sum_total/n\n",
+    "h0 = Planck15.H(0)\n",
+    "print(h0)\n",
+    "volume_sens = (1*u.year)*(const.c/h0)*4*np.pi*sum_total/n\n",
     "print(volume_sens)"
    ]
   },
@@ -342,8 +348,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "7e7eed32-44db-4d20-a40f-a1a4cc1d5bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.39948236263060233\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(inds - (np.array(max_distance_opt)/10))/500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "186b5992-4238-47cd-ad87-cd04d8aed0ce",
    "metadata": {},
    "outputs": [],
    "source": []
