corrected volume-time-sensitivity dimensions

--- a/time-volume.ipynb
+++ b/time-volume.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "id": "d7667e3b-5810-4b64-9dda-3c349026f3a1",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,8 @@
      "output_type": "stream",
      "text": [
       "67.74 km / (Mpc s)\n",
-      "10996281752719.53 m Mpc3 yr / km\n"
+      "10996281752719.53 m Mpc3 yr / km\n",
+      "1.099628175271953e+16 m2 Mpc3 yr / km2\n"
      ]
     }
    ],
@@ -285,7 +286,8 @@
     "h0 = Planck15.H(0)\n",
     "print(h0)\n",
     "volume_sens = (1*u.year)*(const.c/h0)*4*np.pi*sum_total/n\n",
-    "print(volume_sens)"
+    "print(volume_sens)\n",
+    "print(volume_sens * (10**3 * u.m / u.km))"
    ]
   },
   {
