--- a/time-volume.ipynb
+++ b/time-volume.ipynb
@@ -589,8 +589,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "a2f86d76-1e06-4e6a-aefd-4b37198b5c0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average snr at distance 1Mpc with virgo: 14754.157356000815\n",
+      "Average snr at distance 1Mpc without virgo: 11692.57780758574\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average snr at distance 1Mpc with virgo: {np.sum(snr_lst_V1)/len(snr_lst_V1)}\")\n",
+    "print(f\"Average snr at distance 1Mpc without virgo: {np.sum(snr_lst)/len(snr_lst)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f06221e-907a-4c16-af29-c853f57f52fd",
    "metadata": {},
    "outputs": [],
    "source": []
